flux/monitoring/prometheus/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus-system
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare-production
    external-dns.alpha.kubernetes.io/hostname: prometheus.${cluster_name}.${cluster_domain}
spec:
  ingressClassName: nginx-internal
  rules:
    - host: prometheus.${cluster_name}.${cluster_domain}
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: prometheus
                port:
                  number: 9090
  tls:
    - hosts:
        - prometheus.${cluster_name}.${cluster_domain}
      secretName: ingress-prometheus-tls
